istio/userapi-v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapi-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userapi
      version: v1
  template:
    metadata:
      labels:
        app: userapi
        version: v1
    spec:
      containers:
      - name: userapi
        image: quentinc123/userapi:v1
        ports:
        - containerPort: 3000
