istio/userapi-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapi-v2
  labels:
    app: userapi
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userapi
      version: v2
  template:
    metadata:
      labels:
        app: userapi
        version: v2
    spec:
      containers:
      - name: userapi
        image: quentinc123/userapi:v2 
        ports:
        - containerPort: 8080
