istio/destrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: userapi-destination
spec:
  host: userapi-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
