istio/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: userapi
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: userapi
---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: userapi-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userapi
spec:
  hosts:
  - "*"
  gateways:
  - userapi-gateway
  http:
  - route:
    - destination:
        host: userapi
        subset: v1
      weight: 90
    - destination:
        host: userapi
        subset: v2
      weight: 10
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: userapi
spec:
  host: userapi
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
