istio/userapi-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userapi
spec:
  hosts:
  - "*"
  gateways:
  - userapi-gateway
  http:
  - route:
    - destination:
        host: userapi
        subset: v1
      weight: 90
    - destination:
        host: userapi
        subset: v2
      weight: 10
