istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: userapi
  namespace: default
spec:
  gateways:
  - userapi-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /v1
    route:
    - destination:
        host: userapi-service
        subset: v1
  - match:
    - uri:
        prefix: /v2
    route:
    - destination:
        host: userapi-service
        subset: v2
